sdk/c/include/hdds.h


typedef enum HddsError {
  HDDS_OK = 0,
  HDDS_INVALID_ARGUMENT = 1,
  HDDS_NOT_FOUND = 2,
  HDDS_OPERATION_FAILED = 3,
  HDDS_OUT_OF_MEMORY = 4,
  HDDS_CONFIG_ERROR = 10,
  HDDS_INVALID_DOMAIN_ID = 11,
  HDDS_INVALID_PARTICIPANT_ID = 12,
  HDDS_NO_AVAILABLE_PARTICIPANT_ID = 13,
  HDDS_INVALID_STATE = 14,
  HDDS_IO_ERROR = 20,
  HDDS_TRANSPORT_ERROR = 21,
  HDDS_REGISTRATION_FAILED = 22,
  HDDS_WOULD_BLOCK = 23,
  HDDS_TYPE_MISMATCH = 30,
  HDDS_SERIALIZATION_ERROR = 31,
  HDDS_BUFFER_TOO_SMALL = 32,
  HDDS_ENDIAN_MISMATCH = 33,
  HDDS_QOS_INCOMPATIBLE = 40,
  HDDS_UNSUPPORTED = 41,
  HDDS_PERMISSION_DENIED = 50,
  HDDS_AUTHENTICATION_FAILED = 51,
} HddsError;
typedef enum HddsLivelinessKind {
  HDDS_LIVELINESS_AUTOMATIC = 0,
  HDDS_LIVELINESS_MANUAL_BY_PARTICIPANT = 1,
  HDDS_LIVELINESS_MANUAL_BY_TOPIC = 2,
} HddsLivelinessKind;
typedef enum HddsLogLevel {
  HDDS_LOG_OFF = 0,
  HDDS_LOG_ERROR = 1,
  HDDS_LOG_WARN = 2,
  HDDS_LOG_INFO = 3,
  HDDS_LOG_DEBUG = 4,
  HDDS_LOG_TRACE = 5,
} HddsLogLevel;
typedef enum HddsTransportMode {
  HDDS_TRANSPORT_INTRA_PROCESS = 0,
  HDDS_TRANSPORT_UDP_MULTICAST = 1,
} HddsTransportMode;
typedef struct HddsParticipant {
  uint8_t PRIVATE[0];
} HddsParticipant;
typedef struct HddsGuardCondition {
  uint8_t PRIVATE[0];
} HddsGuardCondition;
typedef struct HddsTypeObject {
  uint8_t PRIVATE[0];
} HddsTypeObject;
typedef struct HddsDataWriter {
  uint8_t PRIVATE[0];
} HddsDataWriter;
typedef struct HddsQoS {
  uint8_t PRIVATE[0];
} HddsQoS;
typedef struct HddsDataReader {
  uint8_t PRIVATE[0];
} HddsDataReader;
typedef struct HddsStatusCondition {
  uint8_t PRIVATE[0];
} HddsStatusCondition;
typedef struct HddsWaitSet {
  uint8_t PRIVATE[0];
} HddsWaitSet;
typedef struct HddsPublisher {
  uint8_t PRIVATE[0];
} HddsPublisher;
typedef struct HddsSubscriber {
  uint8_t PRIVATE[0];
} HddsSubscriber;
typedef struct HddsMetrics {
  uint8_t PRIVATE[0];
} HddsMetrics;
typedef struct HddsMetricsSnapshot {
  uint64_t TIMESTAMP_NS;
  uint64_t MESSAGES_SENT;
  uint64_t MESSAGES_RECEIVED;
  uint64_t MESSAGES_DROPPED;
  uint64_t BYTES_SENT;
  uint64_t LATENCY_P50_NS;
  uint64_t LATENCY_P99_NS;
  uint64_t LATENCY_P999_NS;
  uint64_t MERGE_FULL_COUNT;
  uint64_t WOULD_BLOCK_COUNT;
} HddsMetricsSnapshot;
typedef struct HddsTelemetryExporter {
  uint8_t PRIVATE[0];
} HddsTelemetryExporter;
struct HddsParticipant *hdds_participant_create_with_transport(const char *aName,
                                                               enum HddsTransportMode aTransport);
 void hdds_type_object_release(const struct HddsTypeObject *aHandle);
enum HddsError hdds_type_object_hash(const struct HddsTypeObject *aHandle,
                                     uint8_t *aOutVersion,
                                     uint8_t *aOutValue,
                                     uintptr_t aValueLen);
 const char *hdds_version(void);
 void hdds_status_condition_release(const struct HddsStatusCondition *aCondition);
 const struct HddsGuardCondition *hdds_guard_condition_create(void);
 void hdds_guard_condition_release(const struct HddsGuardCondition *aCondition);
 void hdds_guard_condition_set_trigger(const struct HddsGuardCondition *aCondition, bool aActive);
 struct HddsWaitSet *hdds_waitset_create(void);
 void hdds_waitset_destroy(struct HddsWaitSet *aWaitset);
enum HddsError hdds_waitset_attach_status_condition(struct HddsWaitSet *aWaitset,
                                                    const struct HddsStatusCondition *aCondition);
enum HddsError hdds_waitset_attach_guard_condition(struct HddsWaitSet *aWaitset,
                                                   const struct HddsGuardCondition *aCondition);
 enum HddsError hdds_waitset_detach_condition(struct HddsWaitSet *aWaitset, const void *aCondition);
enum HddsError hdds_waitset_wait(struct HddsWaitSet *aWaitset,
                                 int64_t aTimeoutNs,
                                 const void **aOutConditions,
                                 uintptr_t aMaxConditions,
                                 uintptr_t *aOutLen);
 const char *hdds_participant_name(struct HddsParticipant *aParticipant);
 uint32_t hdds_participant_domain_id(struct HddsParticipant *aParticipant);
 uint8_t hdds_participant_id(struct HddsParticipant *aParticipant);
enum HddsError hdds_writer_topic_name(struct HddsDataWriter *aWriter,
                                      char *aBuf,
                                      uintptr_t aBufLen,
                                      uintptr_t *aOutLen);
enum HddsError hdds_reader_topic_name(struct HddsDataReader *aReader,
                                      char *aBuf,
                                      uintptr_t aBufLen,
                                      uintptr_t *aOutLen);
 enum HddsError hdds_logging_init(enum HddsLogLevel aLevel);
 enum HddsError hdds_logging_init_env(enum HddsLogLevel aDefaultLevel);
 enum HddsError hdds_logging_init_with_filter(const char *aFilter);
 struct HddsPublisher *hdds_publisher_create(struct HddsParticipant *aParticipant);
struct HddsPublisher *hdds_publisher_create_with_qos(struct HddsParticipant *aParticipant,
                                                     const struct HddsQoS *aQos);
 void hdds_publisher_destroy(struct HddsPublisher *aPublisher);
 struct HddsSubscriber *hdds_subscriber_create(struct HddsParticipant *aParticipant);
struct HddsSubscriber *hdds_subscriber_create_with_qos(struct HddsParticipant *aParticipant,
                                                       const struct HddsQoS *aQos);
 void hdds_subscriber_destroy(struct HddsSubscriber *aSubscriber);
struct HddsDataWriter *hdds_publisher_create_writer(struct HddsPublisher *aPublisher,
                                                    const char *aTopicName);
struct HddsDataWriter *hdds_publisher_create_writer_with_qos(struct HddsPublisher *aPublisher,
                                                             const char *aTopicName,
                                                             const struct HddsQoS *aQos);
struct HddsDataReader *hdds_subscriber_create_reader(struct HddsSubscriber *aSubscriber,
                                                     const char *aTopicName);
struct HddsDataReader *hdds_subscriber_create_reader_with_qos(struct HddsSubscriber *aSubscriber,
                                                              const char *aTopicName,
                                                              const struct HddsQoS *aQos);
 struct HddsQoS *hdds_qos_load_fastdds_xml(const char *aPath);
 struct HddsQoS *hdds_qos_from_xml(const char *aPath);
 int32_t hdds_qos_get_ownership_strength(const struct HddsQoS *aQos);
 enum HddsLivelinessKind hdds_qos_get_liveliness_kind(const struct HddsQoS *aQos);
 uint64_t hdds_qos_get_liveliness_lease_ns(const struct HddsQoS *aQos);
 uint64_t hdds_qos_get_time_based_filter_ns(const struct HddsQoS *aQos);
 uint64_t hdds_qos_get_latency_budget_ns(const struct HddsQoS *aQos);
 int32_t hdds_qos_get_transport_priority(const struct HddsQoS *aQos);
 uintptr_t hdds_qos_get_max_samples(const struct HddsQoS *aQos);
 uintptr_t hdds_qos_get_max_instances(const struct HddsQoS *aQos);
 uintptr_t hdds_qos_get_max_samples_per_instance(const struct HddsQoS *aQos);
 struct HddsMetrics *hdds_telemetry_init(void);
 struct HddsMetrics *hdds_telemetry_get(void);
 void hdds_telemetry_release(struct HddsMetrics *aMetrics);
enum HddsError hdds_telemetry_snapshot(struct HddsMetrics *aMetrics,
                                       struct HddsMetricsSnapshot *aOut);
void hdds_telemetry_record_latency(struct HddsMetrics *aMetrics,
                                   uint64_t aStartNs,
                                   uint64_t aEndNs);
 struct HddsTelemetryExporter *hdds_telemetry_start_exporter(const char *aBindAddr, uint16_t aPort);
 void hdds_telemetry_stop_exporter(struct HddsTelemetryExporter *aExporter);