sdk/python/hdds/_native.py


    lib.hdds_qos_get_ownership_strength.argtypes = [c_void_p]
    lib.hdds_qos_get_ownership_strength.restype = c_int32

    lib.hdds_qos_get_liveliness_kind.argtypes = [c_void_p]
    lib.hdds_qos_get_liveliness_kind.restype = c_int32

    lib.hdds_qos_get_liveliness_lease_ns.argtypes = [c_void_p]
    lib.hdds_qos_get_liveliness_lease_ns.restype = c_uint64

    lib.hdds_qos_get_time_based_filter_ns.argtypes = [c_void_p]
    lib.hdds_qos_get_time_based_filter_ns.restype = c_uint64

    lib.hdds_qos_get_latency_budget_ns.argtypes = [c_void_p]
    lib.hdds_qos_get_latency_budget_ns.restype = c_uint64

    lib.hdds_qos_get_transport_priority.argtypes = [c_void_p]
    lib.hdds_qos_get_transport_priority.restype = c_int32

    lib.hdds_qos_get_max_samples.argtypes = [c_void_p]
    lib.hdds_qos_get_max_samples.restype = c_size_t

    lib.hdds_qos_get_max_instances.argtypes = [c_void_p]
    lib.hdds_qos_get_max_instances.restype = c_size_t

    lib.hdds_qos_get_max_samples_per_instance.argtypes = [c_void_p]
    lib.hdds_qos_get_max_samples_per_instance.restype = c_size_t

    # -------------------------------------------------------------------------
    # WaitSet
    # -------------------------------------------------------------------------
    lib.hdds_waitset_create.argtypes = []
    lib.hdds_waitset_create.restype = c_void_p

    lib.hdds_waitset_destroy.argtypes = [c_void_p]
    lib.hdds_waitset_destroy.restype = None

    lib.hdds_waitset_attach_status_condition.argtypes = [c_void_p, c_void_p]
    lib.hdds_waitset_attach_status_condition.restype = c_int32

    lib.hdds_waitset_attach_guard_condition.argtypes = [c_void_p, c_void_p]
    lib.hdds_waitset_attach_guard_condition.restype = c_int32

    lib.hdds_waitset_detach_condition.argtypes = [c_void_p, c_void_p]
    lib.hdds_waitset_detach_condition.restype = c_int32

    lib.hdds_waitset_wait.argtypes = [c_void_p, c_int64, POINTER(c_void_p), c_size_t, POINTER(c_size_t)]
    lib.hdds_waitset_wait.restype = c_int32

    # -------------------------------------------------------------------------
    # GuardCondition
    # -------------------------------------------------------------------------
    lib.hdds_guard_condition_create.argtypes = []
    lib.hdds_guard_condition_create.restype = c_void_p

    lib.hdds_guard_condition_release.argtypes = [c_void_p]
    lib.hdds_guard_condition_release.restype = None

    lib.hdds_guard_condition_set_trigger.argtypes = [c_void_p, c_bool]
    lib.hdds_guard_condition_set_trigger.restype = c_int32

    # -------------------------------------------------------------------------
    # Logging
    # -------------------------------------------------------------------------
    lib.hdds_logging_init.argtypes = [c_int32]
    lib.hdds_logging_init.restype = c_int32

    lib.hdds_logging_init_env.argtypes = [c_int32]
    lib.hdds_logging_init_env.restype = c_int32

    lib.hdds_logging_init_with_filter.argtypes = [c_char_p]
    lib.hdds_logging_init_with_filter.restype = c_int32

    # -------------------------------------------------------------------------
    # Participant Info
    # -------------------------------------------------------------------------
    lib.hdds_participant_name.argtypes = [c_void_p]
    lib.hdds_participant_name.restype = c_char_p

    lib.hdds_participant_domain_id.argtypes = [c_void_p]
    lib.hdds_participant_domain_id.restype = c_uint32

    lib.hdds_participant_id.argtypes = [c_void_p]
    lib.hdds_participant_id.restype = c_uint8

    # -------------------------------------------------------------------------
    # Entity Info
    # -------------------------------------------------------------------------
    lib.hdds_writer_topic_name.argtypes = [c_void_p, c_char_p, c_size_t, POINTER(c_size_t)]
    lib.hdds_writer_topic_name.restype = c_int32

    lib.hdds_reader_topic_name.argtypes = [c_void_p, c_char_p, c_size_t, POINTER(c_size_t)]
    lib.hdds_reader_topic_name.restype = c_int32

    # -------------------------------------------------------------------------
    # Publisher / Subscriber
    # -------------------------------------------------------------------------
    lib.hdds_publisher_create.argtypes = [c_void_p]
    lib.hdds_publisher_create.restype = c_void_p

    lib.hdds_publisher_create_with_qos.argtypes = [c_void_p, c_void_p]
    lib.hdds_publisher_create_with_qos.restype = c_void_p

    lib.hdds_publisher_destroy.argtypes = [c_void_p]
    lib.hdds_publisher_destroy.restype = None

    lib.hdds_subscriber_create.argtypes = [c_void_p]
    lib.hdds_subscriber_create.restype = c_void_p

    lib.hdds_subscriber_create_with_qos.argtypes = [c_void_p, c_void_p]
    lib.hdds_subscriber_create_with_qos.restype = c_void_p

    lib.hdds_subscriber_destroy.argtypes = [c_void_p]
    lib.hdds_subscriber_destroy.restype = None

    # -------------------------------------------------------------------------
    # Publisher -> DataWriter
    # -------------------------------------------------------------------------
    lib.hdds_publisher_create_writer.argtypes = [c_void_p, c_char_p]
    lib.hdds_publisher_create_writer.restype = c_void_p

    lib.hdds_publisher_create_writer_with_qos.argtypes = [c_void_p, c_char_p, c_void_p]
    lib.hdds_publisher_create_writer_with_qos.restype = c_void_p

    # -------------------------------------------------------------------------
    # Subscriber -> DataReader
    # -------------------------------------------------------------------------
    lib.hdds_subscriber_create_reader.argtypes = [c_void_p, c_char_p]
    lib.hdds_subscriber_create_reader.restype = c_void_p

    lib.hdds_subscriber_create_reader_with_qos.argtypes = [c_void_p, c_char_p, c_void_p]
    lib.hdds_subscriber_create_reader_with_qos.restype = c_void_p

    # -------------------------------------------------------------------------
    # Participant (extended)
    # -------------------------------------------------------------------------
    lib.hdds_participant_create_with_transport.argtypes = [c_char_p, c_int32]
    lib.hdds_participant_create_with_transport.restype = c_void_p

    # -------------------------------------------------------------------------
    # Status Condition
    # -------------------------------------------------------------------------
    lib.hdds_status_condition_release.argtypes = [c_void_p]
    lib.hdds_status_condition_release.restype = None

    # -------------------------------------------------------------------------
    # Version
    # -------------------------------------------------------------------------
    lib.hdds_version.argtypes = []
    lib.hdds_version.restype = c_char_p

    # -------------------------------------------------------------------------
    # QoS XML Loading (optional, requires qos-loaders feature)
    # -------------------------------------------------------------------------
    if hasattr(lib, 'hdds_qos_from_xml'):
        lib.hdds_qos_from_xml.argtypes = [c_char_p]
        lib.hdds_qos_from_xml.restype = c_void_p

    if hasattr(lib, 'hdds_qos_load_fastdds_xml'):
        lib.hdds_qos_load_fastdds_xml.argtypes = [c_char_p]
        lib.hdds_qos_load_fastdds_xml.restype = c_void_p

    # -------------------------------------------------------------------------
    # TypeObject (optional, requires xtypes feature)
    # -------------------------------------------------------------------------
    if hasattr(lib, 'hdds_type_object_release'):
        lib.hdds_type_object_release.argtypes = [c_void_p]
        lib.hdds_type_object_release.restype = None

    if hasattr(lib, 'hdds_type_object_hash'):
        lib.hdds_type_object_hash.argtypes = [c_void_p, POINTER(c_uint8), POINTER(c_uint8), c_size_t]
        lib.hdds_type_object_hash.restype = c_int32

    # -------------------------------------------------------------------------
    # Telemetry
    # -------------------------------------------------------------------------
    lib.hdds_telemetry_init.argtypes = []
    lib.hdds_telemetry_init.restype = c_void_p

    lib.hdds_telemetry_get.argtypes = []
    lib.hdds_telemetry_get.restype = c_void_p

    lib.hdds_telemetry_release.argtypes = [c_void_p]
    lib.hdds_telemetry_release.restype = None

    lib.hdds_telemetry_snapshot.argtypes = [c_void_p, c_void_p]
    lib.hdds_telemetry_snapshot.restype = c_int32

    lib.hdds_telemetry_record_latency.argtypes = [c_void_p, c_uint64, c_uint64]
    lib.hdds_telemetry_record_latency.restype = None

    lib.hdds_telemetry_start_exporter.argtypes = [c_char_p, c_uint16]
    lib.hdds_telemetry_start_exporter.restype = c_void_p

    lib.hdds_telemetry_stop_exporter.argtypes = [c_void_p]
    lib.hdds_telemetry_stop_exporter.restype = None


# =============================================================================
# Log Level Enum
# =============================================================================

class TransportMode:
    """Transport mode for participant creation.

    Attributes:
        INTRA_PROCESS: No network, fastest for same-process communication.
        UDP_MULTICAST: UDP multicast for network discovery and communication.
    """
    INTRA_PROCESS = 0
    UDP_MULTICAST = 1


class LogLevel:
    """HDDS logging level constants.

    Attributes:
        OFF: Logging disabled.
        ERROR: Error-level messages only.
        WARN: Warning and above.
        INFO: Informational and above (default).
        DEBUG: Debug and above.
        TRACE: All messages including trace.
    """
    OFF = 0
    ERROR = 1
    WARN = 2
    INFO = 3
    DEBUG = 4
    TRACE = 5


# =============================================================================
# Metrics Snapshot Structure
# =============================================================================

class MetricsSnapshot(Structure):
    """C-compatible telemetry metrics snapshot structure.

    Maps directly to the HddsMetricsSnapshot struct in hdds.h.
    Used internally by the telemetry module. Users should use
    ``hdds.telemetry.MetricsSnapshot`` (the dataclass version) instead.
    """
    _fields_ = [
        ("timestamp_ns", c_uint64),
        ("messages_sent", c_uint64),
        ("messages_received", c_uint64),
        ("messages_dropped", c_uint64),
        ("bytes_sent", c_uint64),
        ("latency_p50_ns", c_uint64),
        ("latency_p99_ns", c_uint64),
        ("latency_p999_ns", c_uint64),
        ("merge_full_count", c_uint64),
        ("would_block_count", c_uint64),
    ]
